# DRL-SFM

./: LICENSE  README.md  install.sh  install_comands.txt
hunav_rl/: package.xml  setup.cfg  setup.py  start_evaluation.py  start_multiple_evaluations.py  start_trainings.py
hunav_rl/config/: agents_cafe.yaml  agents_eng_hall.yaml  agents_hospital.yaml  agents_random.yaml  agents_small_hospital_10.yaml  agents_small_hospital_15.yaml  agents_small_house_10.yaml  agents_small_house_15.yaml  agents_small_house_5.yaml  metrics.yaml  nav2_params.yaml  nav2_params_dwb.yaml  nav2_params_mppi.yaml  nav2_params_rl.yaml  training_configurations.json  training_queue.txt  training_scenario.json
hunav_rl/eval_paths/: eval_paths_small_hospital.pkl
hunav_rl/evaluation/small_hospital_5_SAC-HuMap-LeNet-Cost2_SFM/: agents_small_hospital_5.yaml  metrics.txt  metrics_steps_0.txt  metrics_steps_1.txt  metrics_steps_2.txt  metrics_steps_3.txt  metrics_steps_4.txt
hunav_rl/hunav_rl/: __init__.py  callbacks.py  eval.py  feature_extractor_costmap.py  feature_extractor_humap.py  path_follower_drlsf.py  rewards.py  robot_controller.py  scan_merge.py  start_training.py  unpause.py  wheelchair_env.py
hunav_rl/launch/: eng_hall.launch.py  gazebo_small_hospital.launch.py  gazebo_small_house.launch.py  hospital_light.launch.py  nav.launch.py  nav_2_cafe.launch.py  nav_2_eng_hall.launch.py  nav_2_hospital.launch.py  nav_2_random.launch.py  navigation.launch.py  navigation_dwb.launch.py  navigation_mppi.launch.py  navigation_rl.launch.py  random_light.launch.py  robot_state_publisher_waffle_rl.launch.py  rtabmap.launch.py  spawn_waffle_rl.launch.py  start_training.launch.py  tb3_cafe_light.launch.py
hunav_rl/maps/: rtabmap_small_house.db
hunav_rl/models/ElectricWheelchair/: model.dae
hunav_rl/models/empty_room/: model.config  model.sdf
hunav_rl/models/faps_door/: model.config  model.sdf
hunav_rl/models/faps_door_01/: model.config  model.sdf
hunav_rl/models/faps_door_02/: model.config  model.sdf
hunav_rl/models/faps_door_03/: model.config  (+1 more)
hunav_rl/rviz/: training.rviz
hunav_rl/urdf/: turtlebot3_waffle_rl.urdf  waffle_base.dae
hunav_rl/worlds/: empty_cafe.world  eng_hall.world  generatedWorld_cafe.world  generatedWorld_eng_hall.world  generatedWorld_hospital.world  generatedWorld_random.world  hospital.world  random.world  small_house.world
nav2_rl_controller_msgs/: CMakeLists.txt  README.md  package.xml
nav2_rl_controller_msgs/action/: CalcTwist.action
(+41 files in other folders)
