<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hunav_rl</name>
  <version>0.0.0</version>
  <description>TODO</description>
  <maintainer email="TODO@TODO.TODO">TODO</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>people_msgs</depend>
  <depend>fadw_msgs</depend>
  <depend>std_srvs</depend>
  <depend>launch</depend>
  <depend>gymnasium</depend>
  <depend>numpy</depend>
  <depend>stable_baselines3</depend>
  <depend>sb3_contrib</depend>
  <depend>hunav_evaluator</depend>
  <depend>hunav_msgs</depend>
  <depend>gazebo-ros-pkgs</depend>
  <depend>navigation2</depend>
  <depend>nav2-bringup</depend>
  <depend>turtlebot3-gazebo</depend>
  <depend>rtabmap-ros</depend>
  <depend>tf-transformations</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
    <member_of_group>rosidl_interface_packages</member_of_group>
  </export>
</package>
